Fix icon spacing on project links

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -171,6 +171,11 @@ hr {
     }
   }
 }
+
+.inline-icon {
+  padding-left: 0.3em;
+}
+
 .spinner {
   text-align: center;
   font-size: 2em;
